--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <h1>
-	"Welcome to Accio Jobs!"
+	Welcome to Accio Jobs!
 </h1>
 </body>
 
